# RustySchedule

./: .env.test  .gitignore  Cargo.toml  LICENSE  README.md
crates/main/: Cargo.toml  main.rs
crates/student_system/: Cargo.toml  README.md  actix_web_router.rs  bootstrap.rs  lib.rs
crates/student_system/availability/application/: dto.rs  get_all_courses.rs  mod.rs  register_availability.rs  validate_enrollment.rs
crates/student_system/availability/domain/: availability.rs  available_course_dto.rs  mod.rs  repository.rs  validate_enrollment_dto.rs
crates/student_system/availability/infrastructure/: mod.rs
crates/student_system/availability/infrastructure/controllers/: get_available_courses_handler.rs  mod.rs  register_availability_handler.rs  validate_enrollment_handler.rs
crates/student_system/availability/infrastructure/use_cases/: get_available_courses.rs  mod.rs  register_availability.rs  repository.rs  validate_enrollment.rs
crates/student_system/crud_enrollment/application/: find_all_by_student.rs  get_schedule.rs  mod.rs  update_status.rs  withdraw.rs
crates/student_system/crud_enrollment/domain/: crud_enrollment.rs  enrollment_dto.rs  mod.rs  repository.rs
crates/student_system/crud_enrollment/infrastructure/: mod.rs
crates/student_system/crud_enrollment/infrastructure/controllers/: get_schedule_handler.rs  mod.rs  withdraw_enrollment_handler.rs
crates/student_system/crud_enrollment/infrastructure/use_cases/: find_all_by_student.rs  find_enrollment_id.rs  get_schedule.rs  mod.rs  repository.rs  update_status.rs
crates/student_system/enrollment/application/: complete_course.rs  enroll_in_course.rs  find_active_courses_by_semester.rs  find_available_courses_to_enroll.rs  find_available_sections_by_course_code.rs  mod.rs
crates/student_system/enrollment/domain/: available_course.rs  course_cycle.rs  course_id.rs  credit_amount.rs  curriculum_id.rs  enrollment.rs  enrollment_id.rs  enrollment_status.rs  error.rs  mod.rs  repository.rs  semester_parity.rs  student_status.rs  user_code.rs  user_id.rs  user_info.rs
crates/student_system/enrollment/infrastructure/: actix_web_router.rs  mod.rs  supabase_enrollment_repository.rs
crates/student_system/enrollment/infrastructure/controllers/: available_courses_controller.rs  complete_courses_controller.rs  completed_list_of_courses_controller.rs  current_enrollments_controller.rs  delete_controller.rs  enroll_in_course_controller.rs  enroll_in_course_dto.rs  enrollment_attempts_controller.rs  find_by_id_controller.rs  find_by_student_and_course_controller.rs  mod.rs  save_controller.rs  total_credits_enrolled_controller.rs  user_data_by_code_controller.rs  user_info_controller.rs
crates/student_system/enrollment/infrastructure/converters/: enrollment_converter.rs  enrollment_status_converter.rs  mod.rs  student_converter.rs
crates/student_system/enrollment/infrastructure/entity/: academic_periods.rs  availabilities.rs  course_prerequisites.rs  course_schedules.rs  courses.rs  enrollments.rs  facilities.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
crates/student_system/enrollment/infrastructure/use_cases/: completed_courses.rs  count_enrolled_courses.rs  count_sections_by_course_code.rs  current_enrollments.rs  delete.rs  enrollment_attempts.rs  find_active_courses_by_curriculum.rs  find_any_enrolled_semester.rs  find_available_courses_to_enroll.rs  find_by_id.rs  find_by_student_and_course.rs  find_prerequisites_by_course_id.rs  find_sections_by_course_code.rs  find_user_info_by_code.rs  mod.rs  (+4 more)
crates/student_system/suggestion/application/: generate_schedule_suggestion.rs  mod.rs
crates/student_system/suggestion/domain/: mod.rs  repository.rs  section.rs  suggestion.rs
crates/student_system/suggestion/infrastructure/: fetch_available_data_handler.rs  mod.rs  repository.rs
crates/teacher_system/: Cargo.toml  README.md  lib.rs
crates/teacher_system/application/dto/: course_dto.rs  mod.rs  schedule_dto.rs  teacher_dto.rs
crates/teacher_system/application/use_cases/: course_management.rs  extracurricular_management.rs  facility_management.rs  mod.rs  schedule_management.rs  teacher_queries.rs  user_management.rs
crates/teacher_system/domain/models/: course.rs  enrollment.rs  enums.rs  facilitie.rs  facilitie_available.rs  mod.rs  schedule.rs  user.rs
crates/teacher_system/domain/repositories/: course_repository.rs  facility_repository.rs  mod.rs  schedule_repository.rs  user_repository.rs
crates/teacher_system/domain/services/: mod.rs  scheduling_service.rs  validation_service.rs
crates/teacher_system/infrastructure/: mod.rs
crates/teacher_system/infrastructure/api_restful/: mod.rs  routes.rs
crates/teacher_system/infrastructure/auth/: supabase_auth.rs
crates/teacher_system/infrastructure/database/: conexion.rs  mod.rs
crates/teacher_system/infrastructure/supabase/: course_repo_impl.rs  mod.rs  schedule_repo_impl.rs  user_repo_impl.rs
(+78 files in other folders)
