[package]
name = "rusty_schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
sea-orm = "1.1.12"
dotenvy = "0.15.7"
serde_json = "1.0.140"