[package]
name = "rusty_schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
] }
sea-orm = "1.1.12"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
warp = "0.3"
uuid = { version = "1", features = ["v4"] }
