[package]
name = "main"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
student_system = { path = "../student_system" }
teacher_system = { path = "../teacher_system" }
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
env = "1.0.1"
actix-web = "4"
actix-rt = "2"
dotenv = "0.15.0"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

[[bin]]
name = "Schedule"
path = "main.rs"