[package]
name = "main"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
student_system = { path = "../student_system" }
teacher_system = { path = "../teacher_system" }
tokio = { version = "1.45.1", features = ["full"] }
actix-web = "4"
dotenv = "0.15.0"
actix-cors = "0.7.1"

[[bin]]
name = "Schedule"
path = "main.rs"
