[package]
name = "student_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.88"
thiserror = "2.0.12"
sea-orm = "1.1.12"
shared = { path = "../shared" }
actix-web = "4.11.0"
serde = {version = "1.0.219", features = ["derive"] }

[lib]
path = "lib.rs"