[package]
name = "student_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.88"
thiserror = "2.0.12"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
shared = { path = "../shared" }
actix-web = "4.11.0"
serde = {version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }

[lib]
path = "lib.rs"