[package]
name = "teacher_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
shared = { path = "../shared" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
supabase_rs = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "teacher_system"
path = "lib.rs"
